feat: Refactor Chapter and ChapterAuthor classes for improved author management
- Removed the Contributor relationship from Chapter and replaced it with a ContributorId in ChapterAuthor.
- Updated methods in Chapter to manage ChapterAuthors, including adding and retrieving current authors.
- Introduced ChapterAuthorId class for better encapsulation of ChapterAuthor identifiers.
- Modified createEmptyChapter method in Novel to accept ContributorId instead of Contributor.
- Enhanced turn management for authors in Chapter, ensuring proper handling of current writer status.