@@ -12,15 +12,9 @@ import org.springframework.lang.Nullable;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-
-// Import for the new relationship
-import lab.ujumeonji.literaturebackend.domain.contributor.ChapterContributor;
-import lab.ujumeonji.literaturebackend.domain.novel.ChapterAuthor;
-import lab.ujumeonji.literaturebackend.domain.contributor.Contributor;
 
 @Entity
 @Table(name = "chapters")
@@ -44,10 +38,7 @@ public class Chapter extends BaseEntity<UUID> {
     @OneToMany(mappedBy = "chapter", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
     private List<ChapterText> chapterTexts = new ArrayList<>();
 
-    @OneToMany(mappedBy = "chapter", cascade = CascadeType.ALL, fetch = FetchType.LAZY, orphanRemoval = true)
-    private List<Contributor> contributors = new ArrayList<>();
-
-    @OneToMany(mappedBy = "chapter", cascade = CascadeType.ALL, fetch = FetchType.LAZY, orphanRemoval = true)
+    @OneToMany(mappedBy = "chapter", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
     private List<ChapterAuthor> chapterAuthors = new ArrayList<>();
 
     @Column
@@ -81,7 +72,7 @@ public class Chapter extends BaseEntity<UUID> {
     }
 
     static Chapter create(@Nonnull String title, @Nonnull String description, @Nonnull Novel novel,
-            int chapterNumber, @Nonnull LocalDateTime now) {
+                          int chapterNumber, @Nonnull LocalDateTime now) {
         return new Chapter(title, description, novel, chapterNumber, now, now, null);
     }
 
@@ -100,8 +91,8 @@ public class Chapter extends BaseEntity<UUID> {
 
     @NotNull
     public Optional<ChapterText> addChapterText(@Nonnull AccountId accountId,
-            @Nonnull String content,
-            @Nonnull LocalDateTime now) {
+                                                @Nonnull String content,
+                                                @Nonnull LocalDateTime now) {
         if (this.status != ChapterStatus.IN_PROGRESS) {
             return Optional.empty();
         }
@@ -147,67 +138,32 @@ public class Chapter extends BaseEntity<UUID> {
         return chapterNumber;
     }
 
-    public List<Contributor> getOrderedContributors() {
-        return this.contributors.stream()
-                .filter(c -> !c.isDeleted())
-                .sorted(Comparator.comparingInt(Contributor::getWritingOrder))
-                .toList();
-    }
-
-    @Nullable
-    public Contributor getCurrentWriter() {
-        return this.contributors.stream()
-                .filter(c -> !c.isDeleted() && c.isCurrentWriter())
-                .findFirst()
-                .orElse(null);
-    }
-
-    void addContributor(Contributor contributor) {
-        this.contributors.add(contributor);
-    }
-
-    public List<ChapterAuthor> getOrderedChapterAuthors() {
-        return this.chapterAuthors.stream()
-                .filter(ca -> ca.getContributor() != null && !ca.getContributor().isDeleted())
-                .sorted(Comparator.comparingInt(ca -> ca.getContributor().getWritingOrder()))
-                .toList();
-    }
-
-    @Nullable
-    public ChapterAuthor getCurrentChapterAuthor() {
+    Optional<ChapterAuthor> getCurrentChapterAuthor() {
         return this.chapterAuthors.stream()
                 .filter(ChapterAuthor::isCurrentWriter)
-                .findFirst()
-                .orElse(null);
-    }
-
-    void addChapterAuthor(ChapterAuthor chapterAuthor) {
-        this.chapterAuthors.add(chapterAuthor);
+                .findFirst();
     }
 
     public void advanceTurn() {
-        List<ChapterAuthor> orderedActiveLinks = getOrderedChapterAuthors();
-        if (orderedActiveLinks.isEmpty()) {
+        List<ChapterAuthor> activeAuthors = this.chapterAuthors.stream()
+                .toList();
+
+        if (activeAuthors.isEmpty()) {
             return;
         }
 
-        ChapterAuthor currentLink = getCurrentChapterAuthor();
+        Optional<ChapterAuthor> currentAuthor = getCurrentChapterAuthor();
 
-        if (currentLink == null) {
-            orderedActiveLinks.get(0).setCurrentWriter(true);
+        if (currentAuthor.isEmpty()) {
+            activeAuthors.getFirst().markAsCurrentWriter();
             return;
         }
 
-        currentLink.setCurrentWriter(false);
+        currentAuthor.get().unmarkAsCurrentWriter();
 
-        int currentIndex = orderedActiveLinks.indexOf(currentLink);
-        if (currentIndex == -1) {
-            orderedActiveLinks.get(0).setCurrentWriter(true);
-            return;
-        }
-
-        int nextIndex = (currentIndex + 1) % orderedActiveLinks.size();
-        orderedActiveLinks.get(nextIndex).setCurrentWriter(true);
+        int currentIndex = activeAuthors.indexOf(currentAuthor.get());
+        int nextIndex = (currentIndex + 1) % activeAuthors.size();
+        activeAuthors.get(nextIndex).markAsCurrentWriter();
     }
 
     void update(@Nullable String title, @Nonnull LocalDateTime now) {
@@ -216,5 +172,9 @@ public class Chapter extends BaseEntity<UUID> {
         }
         this.title = title;
         setUpdatedAt(now);
+    }
+
+    void addChapterAuthor(ChapterAuthor author) {
+        this.chapterAuthors.add(author);
     }
 }
